Feat: add clerk auth, home page

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    background-color: #e6e6ff;
-    width: 100vw;
-    overflow-x: hidden;
-    font-family: 'Courier New', Courier, monospace;
+body {
+  background-color: #e6e6ff;
+  width: 100vw;
+  overflow-x: hidden;
+  font-family: "Courier New", Courier, monospace;
+}
+.animatedButton {
+  animation-duration: 10000ms;
 }
